Progression 0.5.0
  Updated to Minecraft 1.8.9
  Rewrote the guis, to have two modes edit and display modes
  Changed items to use filters instead of selecting all individually
  Added Support for displaying criteria, and claiming rewards with Enchiridion Books (And more)
  Added Potion Effect Reward

Progression 0.4.1
  Add On Second Trigger
  Fix click position for popup toggle
  Fix potential crash when editing
  Fix saving/loading of player data

Progression 0.4.0
  Add Support for Thermal Expansion Machinist's Workbench
  Add Support for Thaumcraft Worktable
  Added On Eaten Trigger
  Added On Achievement Trigger
  Added Remove Item Reward
  Add Achievement Popup when completing a Criteria (can be toggled off per criteria)
  Can drag the mouse to scroll through the tree editor
  Only display links when criteria are in the same tab
  Speed will now work on negative speeds, as well as not require sprint pressing
  Add three booleans to speed, whether it affects land, air or water speed
  Criteria now stored in seperate areas for ssp/smp
  Fix a bunch of things?
  
Progression 0.3.8
  Fix commands in smp

Progression 0.3.7
  Fix Obtain Trigger
  Add config to disable nei display for locked recipes

Progression 0.3.6
  Fix saving of items with nbt
  Move some things from options to criteria.json where it applies
  Make Obtain trigger check every 1 and a half seconds instead of every tick
  Allow changing of the item to to open the gui
  Fix Potential crash when rendering criteria
  More reliably add inventory items to the item selector

Progression 0.3.5
  Mods will now bypass the system if there isn't support for them added, instead of not working
  Add Support for Forestry Worktable
  Add Support for Autopackager mod
  Fix Potential crash with Obtain Trigger

Progression 0.3.4
  Fix Potential crash when rendering certain entities in the editor

Progression 0.3.3
  Fix Crash when using the points trigger
  Fix Triggers sometimes firing more than once