@@ -4,7 +4,6 @@ import java.lang.reflect.Field;
 import java.util.HashMap;
 
 import joshie.enchiridion.EConfig;
-import joshie.enchiridion.Enchiridion;
 import joshie.enchiridion.api.gui.IBookEditorOverlay;
 import joshie.enchiridion.gui.book.GuiSimpleEditorAbstract;
 import joshie.enchiridion.util.ITextEditable;
@@ -25,16 +24,6 @@ public class GuiSimpleEditorPoints extends GuiSimpleEditorAbstract {
         return this;
     }
 
-    private boolean isOverAction(int xPos, int yPos, int mouseX, int mouseY) {
-        if (mouseX >= EConfig.editorXPos + xPos && mouseX <= EConfig.editorXPos + xPos + 9) {
-            if (mouseY >= EConfig.toolbarYPos + yPos + 7 && mouseY <= EConfig.toolbarYPos + yPos + 17) {
-                return true;
-            }
-        }
-
-        return false;
-    }
-
     private boolean isOverPosition(int x1, int y1, int x2, int y2, int mouseX, int mouseY) {
         if (mouseX >= EConfig.editorXPos + x1 && mouseX <= EConfig.editorXPos + x2) {
             if (mouseY >= EConfig.toolbarYPos + y1 && mouseY <= EConfig.toolbarYPos + y2) {
@@ -44,8 +33,6 @@ public class GuiSimpleEditorPoints extends GuiSimpleEditorAbstract {
 
         return false;
     }
-
-    //CONVERT IN TO BUTTONS
 
     private static final int xPosStart = 4;
 
